--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pocketcdg-core"]
 	path = pocketcdg-core
-	url = git@github.com:redbug26/pocketcdg-core.git
+	url = https://github.com/redbug26/pocketcdg-core.git
