--- a/Makefile.common
+++ b/Makefile.common
@@ -1,3 +1,10 @@
+INCFLAGS :=
+LIBRETRO_COMM_DIR := $(CORE_DIR)/libretro-common
+
+ifneq (,$(findstring msvc2003,$(platform)))
+INCFLAGS += -I$(LIBRETRO_COMM_DIR)/include/compat/msvc
+endif
+
 SOURCES_C := \
 	$(CORE_DIR)/libretro.c \
 	$(CORE_DIR)/plateform.c \
