--- a/Makefile.common
+++ b/Makefile.common
@@ -5,6 +5,8 @@ ifneq (,$(findstring msvc2003,$(platform)))
 INCFLAGS += -I$(LIBRETRO_COMM_DIR)/include/compat/msvc
 endif
 
+INCFLAGS += -I$(LIBRETRO_COMM_DIR)/include
+
 SOURCES_C := \
 	$(CORE_DIR)/libretro.c \
 	$(CORE_DIR)/plateform.c \
