--- a/Makefile.common
+++ b/Makefile.common
@@ -17,6 +17,7 @@ SOURCES_C := \
 	$(wildcard $(CORE_DIR)/zip/*.c) \
 	$(wildcard $(CORE_DIR)/zip/zlib/*.c)
 
+ifneq ($(STATIC_LINKING),1)
 SOURCES_C += \
 	$(LIBRETRO_COMM_DIR)/compat/compat_posix_string.c \
 	$(LIBRETRO_COMM_DIR)/compat/compat_strcasestr.c \
@@ -30,3 +31,4 @@ SOURCES_C += \
 	$(LIBRETRO_COMM_DIR)/streams/file_stream_transforms.c \
 	$(LIBRETRO_COMM_DIR)/string/stdstring.c \
 	$(LIBRETRO_COMM_DIR)/vfs/vfs_implementation.c
+endif
