--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,11 @@ include:
   # PlayStation Portable
   - project: 'libretro-infrastructure/ci-templates'
     file: '/psp-static.yml'
-  
+
+  # PlayStation2
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/ps2-static.yml'
+
   # PlayStation Vita
   - project: 'libretro-infrastructure/ci-templates'
     file: '/vita-static.yml'
@@ -193,6 +197,12 @@ libretro-build-tvos-arm64:
 libretro-build-psp:
   extends:
     - .libretro-psp-static-retroarch-master
+    - .core-defs
+
+# PlayStation2
+libretro-build-ps2:
+  extends:
+    - .libretro-ps2-static-retroarch-master
     - .core-defs
 
 # PlayStation Vita
